--- a/README
+++ b/README
@@ -9,3 +9,5 @@ Classification:
       also, if you can read chinease, this aritcal may be helpful to you. 
       http://zengkui.blog.163.com/blog/static/2123000822012103113739819/
 ----->LogisticRegression
+      More information with chinease 
+      http://zengkui.blog.163.com/blog/static/21230008220127111040747/
