--- a/README
+++ b/README
@@ -11,3 +11,6 @@ Classification:
 ----->LogisticRegression
       More information with chinease 
       http://zengkui.blog.163.com/blog/static/21230008220127111040747/
+----->LinearRegression
+      More detail information with chinear
+      http://zengkui.blog.163.com/blog/static/21230008220127411250679/
