--- a/README
+++ b/README
@@ -12,5 +12,5 @@ Classification:
       More information with chinease 
       http://zengkui.blog.163.com/blog/static/21230008220127111040747/
 ----->LinearRegression
-      More detail information with chinear
+      More detail information with chinease
       http://zengkui.blog.163.com/blog/static/21230008220127411250679/
