--- a/README
+++ b/README
@@ -6,11 +6,11 @@ Classification:
 ----->DecisionTree : decision_tree.py
       http://en.wikipedia.org/wiki/Decision_tree 
       For detail about how to build a decision tree. 
-      also, if you can read chinease, this aritcal may be helpful to you. 
+      also, if you can read chinese, this aritcal may be helpful to you. 
       http://zengkui.blog.163.com/blog/static/2123000822012103113739819/
 ----->LogisticRegression
-      More information with chinease 
+      More information with chinese 
       http://zengkui.blog.163.com/blog/static/21230008220127111040747/
 ----->LinearRegression
-      More detail information with chinease
+      More detail information with chinese
       http://zengkui.blog.163.com/blog/static/21230008220127411250679/
