--- a/README
+++ b/README
@@ -30,5 +30,10 @@ Classification:
       independent. We can classify the article by the following formular:
       P(C_i|w_1,w_2...w_n) = P(w_1,w_2...w_n|C_i) * P(C_i) / P(w_1,w_2...w_n)
       = P(w_1|C_i) * P(w_2|C_i)...P(w_n|C_i) * P(C_i) / (P(w_1) * P(w_2) ...P(w_n))
+Cluster:
+----->K-means
+      More detail information with chinese
+      http://zengkui.blog.163.com/blog/static/21230008220127411250679/
+
 
  
